<resources>
    <string name="app_name">food panda</string>
    <string name="image">Image</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_email">Continue with email</string>
    <string name="by_continuing_you_agree_to_our_terms_and_conditions_and_privacy_policy">By continuing, you agree to our Terms and Conditions and Privacy Policy</string>
    <string name="panda_image">Panda Image</string>
    <string name="sign_up_or_log_in">Sign up or Log in</string>
    <string name="select_your_preferred_method_to_continue">Select your preferred method to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_image">login image</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="confirm_password">confirm Password</string>
</resources>