<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC0CB"
    tools:context=".MainActivity">

    <!-- Image at the top -->
    <ImageView
        android:id="@+id/login_image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/login_image"
        android:src="@drawable/panda_image"
    android:scaleType="centerInside"
    android:background="#FFC0CB"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="30dp"/>

    <!-- Login section with buttons -->
    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:background="@drawable/rounded_corners"
    android:padding="20dp"
    app:layout_constraintTop_toBottomOf="@id/login_image"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <!-- Sign up or Log in Text -->
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_or_log_in"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_preferred_method_to_continue"
        android:textColor="#808080"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <!-- Google Sign-in button -->
        <Button
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/google_icon"
            android:text="@string/continue_with_google"
            android:textColor="#E9E6E6" />

    <!-- Facebook Sign-in button -->
    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_with_facebook"
        android:drawableLeft="@drawable/facebook_icon"
        android:background="@color/white"
    android:textColor="#F2F0F0"
    android:layout_marginTop="10dp"/>

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C0C0C0"
        android:layout_marginTop="10dp"/>

    <!-- Continue with Email button -->
    <Button
        android:id="@+id/btn_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_with_email"
        android:drawableLeft="@drawable/mail_icon"

android:background="@color/white"
    android:textColor="#EFEBED"
    android:layout_marginTop="10dp"/>

    <!-- Terms and Conditions Text -->
    <TextView
        android:id="@+id/login_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_continuing_you_agree_to_our_terms_and_conditions_and_privacy_policy"
        android:textColor="#808080"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
