<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">



    <!-- Header Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="8dp"/>



    <!-- Email Input Field -->
    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:background="@drawable/input_border"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@drawable/input_border"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/c_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@drawable/input_border"
        android:layout_marginBottom="24dp" />
    <!-- Continue Button -->
    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:background="@color/blue"
        android:enabled="true" />


    <!-- Sign Up Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <!-- Don't have an account? Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center_vertical"/>

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:background="@android:color/transparent"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>
